lib/json2bits/configurator.rb
# Define a binary serializer using Treetop parser
# Autogenerated from a Treetop grammar. Edits may be lost.


# https://github.com/nathansobo/treetop
# https://www.rubydoc.info/gems/treetop/1.6.11
# https://cjheath.github.io/treetop/
# http://thingsaaronmade.com/blog/a-quick-intro-to-writing-a-parser-using-treetop.html
# https://morioh.com/p/c601072f2066

# see example in fixtures/files/binary_serializer.tt

# External functions
# Device.precondition_vocabulary(attr)

# to compile the grammar
# tt lib/json2bits/configurator.tt -f

#require_relative "codecs"

module Configurator
  include Treetop::Runtime

  def root
    @root ||= :configuration
  end

  module Configuration0
    def line
      elements[0]
    end

  end

  module Configuration1
    def s
      elements[0]
    end

    def lines
      elements[3]
    end
  end

  module Configuration2
    def value
      statics = 1
      lines.elements.inject(Codecs.new(globals: s.value)) do |codecs, elt| 
        codec = elt.line.value
        codecs.add_codec(codec)
        codecs
      end            
    end
  end

  def _nt_configuration
    start_index = index
    if node_cache[:configuration].has_key?(index)
      cached = node_cache[:configuration][index]
      if cached
        node_cache[:configuration][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r2 = _nt_statics
    if r2
      r1 = r2
    else
      r1 = instantiate_node(SyntaxNode,input, index...index)
    end
    s0 << r1
    if r1
      r4 = _nt_comment
      if r4
        r3 = r4
      else
        r3 = instantiate_node(SyntaxNode,input, index...index)
      end
      s0 << r3
      if r3
        s5, i5 = [], index
        loop do
          r6 = _nt_eol
          if r6
            s5 << r6
          else
            break
          end
        end
        if s5.empty?
          @index = i5
          r5 = nil
        else
          r5 = instantiate_node(SyntaxNode,input, i5...index, s5)
        end
        s0 << r5
        if r5
          s7, i7 = [], index
          loop do
            i8, s8 = index, []
            r9 = _nt_line
            s8 << r9
            if r9
              r11 = _nt_space
              if r11
                r10 = r11
              else
                r10 = instantiate_node(SyntaxNode,input, index...index)
              end
              s8 << r10
              if r10
                s12, i12 = [], index
                loop do
                  r13 = _nt_eol
                  if r13
                    s12 << r13
                  else
                    break
                  end
                end
                if s12.empty?
                  @index = i12
                  r12 = nil
                else
                  r12 = instantiate_node(SyntaxNode,input, i12...index, s12)
                end
                s8 << r12
              end
            end
            if s8.last
              r8 = instantiate_node(SyntaxNode,input, i8...index, s8)
              r8.extend(Configuration0)
            else
              @index = i8
              r8 = nil
            end
            if r8
              s7 << r8
            else
              break
            end
          end
          if s7.empty?
            @index = i7
            r7 = nil
          else
            r7 = instantiate_node(SyntaxNode,input, i7...index, s7)
          end
          s0 << r7
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Configuration1)
      r0.extend(Configuration2)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:configuration][start_index] = r0

    r0
  end

  module Line0
    def key
      elements[1]
    end

    def space
      elements[2]
    end

    def codec
      elements[3]
    end

    def s
      elements[4]
    end

    def c
      elements[5]
    end
  end

  module Line1
    def value
      parameters = { 
            key: key.value,
            comment: (c.text_value.empty? ? "" : c.value),
            statics: (s.text_value.empty? ? {} : s.value)
        }
      parameters.merge!(codec.value)
      codec_type = parameters.delete(:codec_type)
      Object.const_get(codec_type).new(**parameters)
    end
  end

  def _nt_line
    start_index = index
    if node_cache[:line].has_key?(index)
      cached = node_cache[:line][index]
      if cached
        node_cache[:line][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r2 = _nt_space
    if r2
      r1 = r2
    else
      r1 = instantiate_node(SyntaxNode,input, index...index)
    end
    s0 << r1
    if r1
      r3 = _nt_key
      s0 << r3
      if r3
        r4 = _nt_space
        s0 << r4
        if r4
          r5 = _nt_codec
          s0 << r5
          if r5
            r7 = _nt_statics
            if r7
              r6 = r7
            else
              r6 = instantiate_node(SyntaxNode,input, index...index)
            end
            s0 << r6
            if r6
              r9 = _nt_comment
              if r9
                r8 = r9
              else
                r8 = instantiate_node(SyntaxNode,input, index...index)
              end
              s0 << r8
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Line0)
      r0.extend(Line1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:line][start_index] = r0

    r0
  end

  module Comment0
  end

  module Comment1
  end

  module Comment2
    def value
      text_value
    end
  end

  def _nt_comment
    start_index = index
    if node_cache[:comment].has_key?(index)
      cached = node_cache[:comment][index]
      if cached
        node_cache[:comment][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    s1, i1 = [], index
    loop do
      r2 = _nt_space
      if r2
        s1 << r2
      else
        break
      end
    end
    r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
    s0 << r1
    if r1
      if (match_len = has_terminal?("//", false, index))
        r3 = instantiate_node(SyntaxNode,input, index...(index + match_len))
        @index += match_len
      else
        terminal_parse_failure('"//"')
        r3 = nil
      end
      s0 << r3
      if r3
        s4, i4 = [], index
        loop do
          r5 = _nt_space
          if r5
            s4 << r5
          else
            break
          end
        end
        r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
        s0 << r4
        if r4
          s6, i6 = [], index
          loop do
            i7, s7 = index, []
            i8 = index
            r9 = _nt_eol
            if r9
              @index = i8
              r8 = nil
            else
              @index = i8
              r8 = instantiate_node(SyntaxNode,input, index...index)
            end
            s7 << r8
            if r8
              if index < input_length
                r10 = true
                @index += 1
              else
                terminal_parse_failure("any character")
                r10 = nil
              end
              s7 << r10
            end
            if s7.last
              r7 = instantiate_node(SyntaxNode,input, i7...index, s7)
              r7.extend(Comment0)
            else
              @index = i7
              r7 = nil
            end
            if r7
              s6 << r7
            else
              break
            end
          end
          r6 = instantiate_node(SyntaxNode,input, i6...index, s6)
          s0 << r6
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Comment1)
      r0.extend(Comment2)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:comment][start_index] = r0

    r0
  end

  def _nt_codec
    start_index = index
    if node_cache[:codec].has_key?(index)
      cached = node_cache[:codec][index]
      if cached
        node_cache[:codec][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    r1 = _nt_codec_boolean
    if r1
      r1 = SyntaxNode.new(input, (index-1)...index) if r1 == true
      r0 = r1
    else
      r2 = _nt_codec_integer
      if r2
        r2 = SyntaxNode.new(input, (index-1)...index) if r2 == true
        r0 = r2
      else
        r3 = _nt_codec_datetime
        if r3
          r3 = SyntaxNode.new(input, (index-1)...index) if r3 == true
          r0 = r3
        else
          r4 = _nt_codec_float
          if r4
            r4 = SyntaxNode.new(input, (index-1)...index) if r4 == true
            r0 = r4
          else
            r5 = _nt_codec_bytes
            if r5
              r5 = SyntaxNode.new(input, (index-1)...index) if r5 == true
              r0 = r5
            else
              r6 = _nt_codec_hexa
              if r6
                r6 = SyntaxNode.new(input, (index-1)...index) if r6 == true
                r0 = r6
              else
                r7 = _nt_codec_symbol
                if r7
                  r7 = SyntaxNode.new(input, (index-1)...index) if r7 == true
                  r0 = r7
                else
                  r8 = _nt_codec_void
                  if r8
                    r8 = SyntaxNode.new(input, (index-1)...index) if r8 == true
                    r0 = r8
                  else
                    r9 = _nt_codec_sequence
                    if r9
                      r9 = SyntaxNode.new(input, (index-1)...index) if r9 == true
                      r0 = r9
                    else
                      r10 = _nt_codec_alias
                      if r10
                        r10 = SyntaxNode.new(input, (index-1)...index) if r10 == true
                        r0 = r10
                      else
                        r11 = _nt_codec_array
                        if r11
                          r11 = SyntaxNode.new(input, (index-1)...index) if r11 == true
                          r0 = r11
                        else
                          r12 = _nt_codec_xor
                          if r12
                            r12 = SyntaxNode.new(input, (index-1)...index) if r12 == true
                            r0 = r12
                          else
                            r13 = _nt_codec_list
                            if r13
                              r13 = SyntaxNode.new(input, (index-1)...index) if r13 == true
                              r0 = r13
                            else
                              @index = i0
                              r0 = nil
                            end
                          end
                        end
                      end
                    end
                  end
                end
              end
            end
          end
        end
      end
    end

    node_cache[:codec][start_index] = r0

    r0
  end

  module CodecBoolean0
    def value
      {codec_type: "CodecBoolean"} 
    end
  end

  def _nt_codec_boolean
    start_index = index
    if node_cache[:codec_boolean].has_key?(index)
      cached = node_cache[:codec_boolean][index]
      if cached
        node_cache[:codec_boolean][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    if (match_len = has_terminal?("BOOLEAN", false, index))
      r0 = instantiate_node(SyntaxNode,input, index...(index + match_len))
      r0.extend(CodecBoolean0)
      @index += match_len
    else
      terminal_parse_failure('"BOOLEAN"')
      r0 = nil
    end

    node_cache[:codec_boolean][start_index] = r0

    r0
  end

  module CodecInteger0
    def nb_bit
      elements[2]
    end

  end

  module CodecInteger1
    def value
      {codec_type: "CodecInteger", nb_bit: nb_bit.value} 
    end
  end

  def _nt_codec_integer
    start_index = index
    if node_cache[:codec_integer].has_key?(index)
      cached = node_cache[:codec_integer][index]
      if cached
        node_cache[:codec_integer][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if (match_len = has_terminal?("INTEGER", false, index))
      r1 = instantiate_node(SyntaxNode,input, index...(index + match_len))
      @index += match_len
    else
      terminal_parse_failure('"INTEGER"')
      r1 = nil
    end
    s0 << r1
    if r1
      if (match_len = has_terminal?("(", false, index))
        r2 = true
        @index += match_len
      else
        terminal_parse_failure('"("')
        r2 = nil
      end
      s0 << r2
      if r2
        r3 = _nt_integer
        s0 << r3
        if r3
          if (match_len = has_terminal?(")", false, index))
            r4 = true
            @index += match_len
          else
            terminal_parse_failure('")"')
            r4 = nil
          end
          s0 << r4
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(CodecInteger0)
      r0.extend(CodecInteger1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:codec_integer][start_index] = r0

    r0
  end

  module CodecFloat0
    def nb_bit
      elements[2]
    end

    def spl1
      elements[3]
    end

    def min
      elements[4]
    end

    def spl2
      elements[5]
    end

    def max
      elements[6]
    end

  end

  module CodecFloat1
    def value
      {codec_type: "CodecFloat", nb_bit: nb_bit.value, min_float: min.value, max_float: max.value} 
    end
  end

  def _nt_codec_float
    start_index = index
    if node_cache[:codec_float].has_key?(index)
      cached = node_cache[:codec_float][index]
      if cached
        node_cache[:codec_float][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if (match_len = has_terminal?("FLOAT", false, index))
      r1 = instantiate_node(SyntaxNode,input, index...(index + match_len))
      @index += match_len
    else
      terminal_parse_failure('"FLOAT"')
      r1 = nil
    end
    s0 << r1
    if r1
      if (match_len = has_terminal?("(", false, index))
        r2 = true
        @index += match_len
      else
        terminal_parse_failure('"("')
        r2 = nil
      end
      s0 << r2
      if r2
        r3 = _nt_integer
        s0 << r3
        if r3
          r4 = _nt_spl
          s0 << r4
          if r4
            r5 = _nt_float
            s0 << r5
            if r5
              r6 = _nt_spl
              s0 << r6
              if r6
                r7 = _nt_float
                s0 << r7
                if r7
                  if (match_len = has_terminal?(")", false, index))
                    r8 = true
                    @index += match_len
                  else
                    terminal_parse_failure('")"')
                    r8 = nil
                  end
                  s0 << r8
                end
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(CodecFloat0)
      r0.extend(CodecFloat1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:codec_float][start_index] = r0

    r0
  end

  module CodecHexa0
    def nb_bytes
      elements[2]
    end

  end

  module CodecHexa1
    def value
      {codec_type: "CodecHexa", nb_bytes: nb_bytes.value } 
    end
  end

  def _nt_codec_hexa
    start_index = index
    if node_cache[:codec_hexa].has_key?(index)
      cached = node_cache[:codec_hexa][index]
      if cached
        node_cache[:codec_hexa][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if (match_len = has_terminal?("HEXA", false, index))
      r1 = instantiate_node(SyntaxNode,input, index...(index + match_len))
      @index += match_len
    else
      terminal_parse_failure('"HEXA"')
      r1 = nil
    end
    s0 << r1
    if r1
      if (match_len = has_terminal?("(", false, index))
        r2 = true
        @index += match_len
      else
        terminal_parse_failure('"("')
        r2 = nil
      end
      s0 << r2
      if r2
        r3 = _nt_integer
        s0 << r3
        if r3
          if (match_len = has_terminal?(")", false, index))
            r4 = true
            @index += match_len
          else
            terminal_parse_failure('")"')
            r4 = nil
          end
          s0 << r4
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(CodecHexa0)
      r0.extend(CodecHexa1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:codec_hexa][start_index] = r0

    r0
  end

  module CodecBytes0
    def nb_bytes
      elements[2]
    end

  end

  module CodecBytes1
    def value
      {codec_type: "CodecBytes", nb_bytes: nb_bytes.value } 
    end
  end

  def _nt_codec_bytes
    start_index = index
    if node_cache[:codec_bytes].has_key?(index)
      cached = node_cache[:codec_bytes][index]
      if cached
        node_cache[:codec_bytes][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if (match_len = has_terminal?("BYTES", false, index))
      r1 = instantiate_node(SyntaxNode,input, index...(index + match_len))
      @index += match_len
    else
      terminal_parse_failure('"BYTES"')
      r1 = nil
    end
    s0 << r1
    if r1
      if (match_len = has_terminal?("(", false, index))
        r2 = true
        @index += match_len
      else
        terminal_parse_failure('"("')
        r2 = nil
      end
      s0 << r2
      if r2
        r3 = _nt_integer
        s0 << r3
        if r3
          if (match_len = has_terminal?(")", false, index))
            r4 = true
            @index += match_len
          else
            terminal_parse_failure('")"')
            r4 = nil
          end
          s0 << r4
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(CodecBytes0)
      r0.extend(CodecBytes1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:codec_bytes][start_index] = r0

    r0
  end

  module CodecSymbol0
    def nb_bit
      elements[2]
    end

    def spl
      elements[3]
    end

    def keys
      elements[4]
    end

  end

  module CodecSymbol1
    def value
      {codec_type: "CodecSymbol", nb_bit: nb_bit.value, symbols: keys.value } 
    end
  end

  def _nt_codec_symbol
    start_index = index
    if node_cache[:codec_symbol].has_key?(index)
      cached = node_cache[:codec_symbol][index]
      if cached
        node_cache[:codec_symbol][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if (match_len = has_terminal?("SYMBOL", false, index))
      r1 = instantiate_node(SyntaxNode,input, index...(index + match_len))
      @index += match_len
    else
      terminal_parse_failure('"SYMBOL"')
      r1 = nil
    end
    s0 << r1
    if r1
      if (match_len = has_terminal?("(", false, index))
        r2 = true
        @index += match_len
      else
        terminal_parse_failure('"("')
        r2 = nil
      end
      s0 << r2
      if r2
        r3 = _nt_integer
        s0 << r3
        if r3
          r4 = _nt_spl
          s0 << r4
          if r4
            r5 = _nt_keys
            s0 << r5
            if r5
              if (match_len = has_terminal?(")", false, index))
                r6 = true
                @index += match_len
              else
                terminal_parse_failure('")"')
                r6 = nil
              end
              s0 << r6
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(CodecSymbol0)
      r0.extend(CodecSymbol1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:codec_symbol][start_index] = r0

    r0
  end

  module CodecDatetime0
    def value
      {codec_type: "CodexDateTime"}
    end
  end

  def _nt_codec_datetime
    start_index = index
    if node_cache[:codec_datetime].has_key?(index)
      cached = node_cache[:codec_datetime][index]
      if cached
        node_cache[:codec_datetime][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    if (match_len = has_terminal?("DATETIME", false, index))
      r0 = instantiate_node(SyntaxNode,input, index...(index + match_len))
      r0.extend(CodecDatetime0)
      @index += match_len
    else
      terminal_parse_failure('"DATETIME"')
      r0 = nil
    end

    node_cache[:codec_datetime][start_index] = r0

    r0
  end

  module CodecVoid0
    def value
      {codec_type: "CodecVoid" }
    end
  end

  def _nt_codec_void
    start_index = index
    if node_cache[:codec_void].has_key?(index)
      cached = node_cache[:codec_void][index]
      if cached
        node_cache[:codec_void][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    if (match_len = has_terminal?("VOID", false, index))
      r0 = instantiate_node(SyntaxNode,input, index...(index + match_len))
      r0.extend(CodecVoid0)
      @index += match_len
    else
      terminal_parse_failure('"VOID"')
      r0 = nil
    end

    node_cache[:codec_void][start_index] = r0

    r0
  end

  module CodecSequence0
    def keys
      elements[2]
    end

  end

  module CodecSequence1
    def value
      {codec_type: "CodecSequence", keys: keys.value } 
    end
  end

  def _nt_codec_sequence
    start_index = index
    if node_cache[:codec_sequence].has_key?(index)
      cached = node_cache[:codec_sequence][index]
      if cached
        node_cache[:codec_sequence][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if (match_len = has_terminal?("SEQUENCE", false, index))
      r1 = instantiate_node(SyntaxNode,input, index...(index + match_len))
      @index += match_len
    else
      terminal_parse_failure('"SEQUENCE"')
      r1 = nil
    end
    s0 << r1
    if r1
      if (match_len = has_terminal?("(", false, index))
        r2 = true
        @index += match_len
      else
        terminal_parse_failure('"("')
        r2 = nil
      end
      s0 << r2
      if r2
        r3 = _nt_keys
        s0 << r3
        if r3
          if (match_len = has_terminal?(")", false, index))
            r4 = true
            @index += match_len
          else
            terminal_parse_failure('")"')
            r4 = nil
          end
          s0 << r4
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(CodecSequence0)
      r0.extend(CodecSequence1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:codec_sequence][start_index] = r0

    r0
  end

  module CodecAlias0
    def key
      elements[2]
    end

  end

  module CodecAlias1
    def value
      {codec_type: "CodecAlias", target_key: key.value } 
    end
  end

  def _nt_codec_alias
    start_index = index
    if node_cache[:codec_alias].has_key?(index)
      cached = node_cache[:codec_alias][index]
      if cached
        node_cache[:codec_alias][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if (match_len = has_terminal?("ALIAS", false, index))
      r1 = instantiate_node(SyntaxNode,input, index...(index + match_len))
      @index += match_len
    else
      terminal_parse_failure('"ALIAS"')
      r1 = nil
    end
    s0 << r1
    if r1
      if (match_len = has_terminal?("(", false, index))
        r2 = true
        @index += match_len
      else
        terminal_parse_failure('"("')
        r2 = nil
      end
      s0 << r2
      if r2
        r3 = _nt_key
        s0 << r3
        if r3
          if (match_len = has_terminal?(")", false, index))
            r4 = true
            @index += match_len
          else
            terminal_parse_failure('")"')
            r4 = nil
          end
          s0 << r4
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(CodecAlias0)
      r0.extend(CodecAlias1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:codec_alias][start_index] = r0

    r0
  end

  module CodecArray0
    def nb_bit
      elements[2]
    end

    def spl
      elements[3]
    end

    def item_key
      elements[4]
    end

  end

  module CodecArray1
    def value
      {codec_type: "CodecArray", nb_bit: nb_bit.value, item_key: item_key.value }
    end
  end

  def _nt_codec_array
    start_index = index
    if node_cache[:codec_array].has_key?(index)
      cached = node_cache[:codec_array][index]
      if cached
        node_cache[:codec_array][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if (match_len = has_terminal?("ARRAY", false, index))
      r1 = instantiate_node(SyntaxNode,input, index...(index + match_len))
      @index += match_len
    else
      terminal_parse_failure('"ARRAY"')
      r1 = nil
    end
    s0 << r1
    if r1
      if (match_len = has_terminal?("(", false, index))
        r2 = true
        @index += match_len
      else
        terminal_parse_failure('"("')
        r2 = nil
      end
      s0 << r2
      if r2
        r3 = _nt_integer
        s0 << r3
        if r3
          r4 = _nt_spl
          s0 << r4
          if r4
            r5 = _nt_key
            s0 << r5
            if r5
              if (match_len = has_terminal?(")", false, index))
                r6 = true
                @index += match_len
              else
                terminal_parse_failure('")"')
                r6 = nil
              end
              s0 << r6
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(CodecArray0)
      r0.extend(CodecArray1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:codec_array][start_index] = r0

    r0
  end

  module CodecList0
    def key
      elements[1]
    end

  end

  module CodecList1
    def value
      {
      codec_type: "CodecList", 
      item_key: key.value, 
      }
    end
  end

  def _nt_codec_list
    start_index = index
    if node_cache[:codec_list].has_key?(index)
      cached = node_cache[:codec_list][index]
      if cached
        node_cache[:codec_list][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if (match_len = has_terminal?("LIST(", false, index))
      r1 = instantiate_node(SyntaxNode,input, index...(index + match_len))
      @index += match_len
    else
      terminal_parse_failure('"LIST("')
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_key
      s0 << r2
      if r2
        if (match_len = has_terminal?(")", false, index))
          r3 = true
          @index += match_len
        else
          terminal_parse_failure('")"')
          r3 = nil
        end
        s0 << r3
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(CodecList0)
      r0.extend(CodecList1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:codec_list][start_index] = r0

    r0
  end

  module CodecXor0
    def spl
      elements[0]
    end

    def binary_key
      elements[1]
    end
  end

  module CodecXor1
    def spl
      elements[0]
    end

    def prefix_key
      elements[1]
    end
  end

  module CodecXor2
    def integer
      elements[1]
    end

    def spl
      elements[2]
    end

    def loose_space1
      elements[4]
    end

    def b
      elements[5]
    end

    def bs
      elements[6]
    end

    def loose_space2
      elements[8]
    end

    def ps
      elements[9]
    end

  end

  module CodecXor3
    def value
      {
        codec_type: "CodecXor",
        nb_bit_binary_key: integer.value,
        binary_keys: bs.elements.inject(b.value) { |h, elt| h.merge!(elt.binary_key.value) },
        prefix_keys: ps.elements.inject([]) { |l, elt| l << elt.prefix_key.value }
      }
    end
  end

  def _nt_codec_xor
    start_index = index
    if node_cache[:codec_xor].has_key?(index)
      cached = node_cache[:codec_xor][index]
      if cached
        node_cache[:codec_xor][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end
